- 3. css중급 > 3.3. css 카운터 1차 완료

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2647,6 +2647,7 @@
 	.t_green {color:@green !important;}
 	.t_black {color:#222 !important;}
 	.t_orange {color:@orange !important;}
+	.weight-500 {font-weight:500 !important;}
 
 	.break_all {word-break:break-all;}
 	.el_block {display:block !important;}
