- 3. css중급 > 3.4. 접두어 완료

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2451,6 +2451,10 @@
 			background:#eee;
 			content:"Web Browser Support for "attr(data-tit);
 		}
+		&.vendor:before {
+			.font-kr; font-weight:500;
+			content:"주요 웹 브라우저의 벤더 프리픽스 "attr(data-tit);
+		}
 		li, p {
 			.lft; width:16.666%; padding:15px 0 10px;
 			border-right:1px solid #eee;
