- form > input 페이지는 3개로 분할 / html 페이지 부분 정리

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2289,6 +2289,85 @@
 		}
 	}
 
+	.tab_menu {
+		@height:50px;
+		@border:1px;
+		@li_border:1px;
+		@border_color:#ddd;
+		ul {
+			.clear;
+			height:@height;
+			border-bottom:@border solid @border_color;
+		}
+		li {
+			.lft; position:relative; z-index:1;
+			border:@li_border solid @border_color; border-bottom:0;
+			&.on {z-index:2;}
+			&:not(:first-child) {margin-left:-@li_border;}
+			a {
+				display:block; position:relative;
+				line-height:@height - @border - @li_border; padding:0 30px;
+				font-size:15px; color:#888; font-weight:500;
+				background:#f5f5f5;
+			}
+			&.on a {
+				line-height:@height - @li_border;
+				color:@blue;
+				background:#fff;
+				&:before {
+					position:absolute; left:-@li_border; top:-@li_border; right:-@li_border;
+					height:3px;
+					background:@blue;
+					content:"";
+				}
+			}
+		}
+	}
+	@media(max-width:@screen-sm-max){
+		.tab_menu {
+			@height:40px;
+			@border:1px;
+			@li_border:1px;
+			@border_color:#ddd;
+			text-align:center;
+
+			ul {
+				height:auto;
+				border:@li_border solid @border_color;
+				border-right:0; border-bottom:0;
+			}
+			li {
+				border:@li_border solid @border_color;
+				border-top:0; border-left:0;
+				&:not(:first-child) {margin-left:0;}
+				a {
+					line-height:@height; padding:0 5px;
+					font-size:13px; font-weight:400;
+				}
+				&.on {
+					&:before {
+						position:absolute; left:50%; bottom:-7px;
+						transform:translate(-50%, 0) rotate(45deg);
+						width:14px; height:14px;
+						border:@li_border solid @border_color;
+						background:#fff;
+						content:"";
+					}
+				}
+				&.on a {
+					line-height:@height;
+					&:before {height:2px;}
+					&:after {
+						position:absolute; left:50%; bottom:-8px;
+						content:"";
+					}
+				}
+			}
+			&.x4 li {width:25%;}
+			&.x3 li {width:33.333%;}
+			&.x2 li {width:50%;}
+		}
+	}
 
 	.uk_note {
 		padding:22px 30px;
@@ -2303,7 +2382,7 @@
 			&:before {content:"[";}
 			&:after {content:"]";}
 		}
-		code {color:darken(#4b6da5, 30%);}
+		code {color:darken(#4b6da5, 20%); background:transparent;}
 	}
 	@media(max-width:@screen-sm-max){
 		.uk_note {
