- css 중급 > ir기법 완료

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2469,9 +2469,9 @@
 	@media(max-width:@screen-sm-max){
 		.view_editor {
 			.ve_tit {
-				line-height:20px;
-				font-size:16px;
-				&:before {margin:0 6px 0 0;}
+				line-height:22px;
+				font-size:15px;
+				&:before {margin:1px 6px 0 0;}
 			}
 			.uk_editor {margin-top:10px;}
 		}
@@ -2504,7 +2504,7 @@
 	.img_figure {
 		padding:20px 15px;
 		border:4px solid #eee; text-align:center;
-		img {max-width:100%; min-width:240px;}
+		img {max-width:100%; min-width:100px;}
 		figcaption {
 			margin-top:20px; text-align:center;
 			font-size:14px; font-weight:400; color:#888;
@@ -2724,6 +2724,7 @@
 	.indent_small {margin-left:15px;}
 	.indent_max {margin-left:50px;}
 
+	.t_color {color:#666 !important;}
 	.t_blue {color:@blue !important;}
 	.t_skyblue {color:@skyBlue !important;}
 	.t_red {color:@red !important;}
@@ -2731,6 +2732,7 @@
 	.t_black {color:#222 !important;}
 	.t_orange {color:@orange !important;}
 	.weight-500 {font-weight:500 !important;}
+	.underline {text-decoration:underline !important;}
 
 	.break_all {word-break:break-all;}
 	.el_block {display:block !important;}
