- css 중급 > css3 모듈 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2716,6 +2716,7 @@
 	.mt_ms {margin-top:15px !important;}
 	.mt_s {margin-top:10px !important;}
 	.mt_sm {margin-top:5px !important;}
+	.mt_1 {margin-top:1px !important;}
 	.mt_0 {margin-top:0 !important;}
 	.ml_mn {margin-left:-25px !important;}
 	.mb_sm {margin-bottom:5px !important;}
