--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -5790,7 +5790,6 @@ body {
 }
 .content_area h2 {
   line-height: 32px;
-  font-family: 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
   font-size: 22px;
   color: #081121;
   letter-spacing: -1px;
@@ -6268,7 +6267,6 @@ body {
 .line_code > p {
   margin-top: 2px;
   padding: 8px 15px;
-  font-family: 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
   word-break: break-all;
   background: #f9f9f9;
 }
@@ -6396,7 +6394,21 @@ body {
   }
   .browser_support li,
   .browser_support p {
+    width: 33.333%;
+    padding: 12px 0 8px;
     font-size: 12px;
+  }
+  .browser_support li:before,
+  .browser_support p:before {
+    margin-bottom: 2px;
+  }
+  .browser_support li:nth-child(3n+3),
+  .browser_support p:nth-child(3n+3) {
+    border-right: 0;
+  }
+  .browser_support li:nth-child(3) ~ li,
+  .browser_support p:nth-child(3) ~ li {
+    border-top: 1px solid #eee;
   }
 }
 @media (max-width: 320px) {
@@ -6959,6 +6971,12 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+.font-face-page h1,
+.font-face-page h2,
+.font-face-page h3,
+.font-face-page h4 {
+  font-family: 'Yeon Sung', cursive;
 }
 /*-
 
