--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -6079,6 +6079,13 @@ body {
   color: rgba(8, 17, 33, 0.9);
   font-weight: bold;
 }
+.ol_lst > li.tit_h4:before,
+.ol_lst > ol > li.tit_h4:before {
+  line-height: 24px;
+  font-size: 16px;
+  color: rgba(8, 17, 33, 0.9);
+  font-weight: bold;
+}
 .ol_lst > li.line_code.font14:before,
 .ol_lst > ol > li.line_code.font14:before {
   line-height: 26px;
@@ -6134,6 +6141,13 @@ body {
   color: rgba(8, 17, 33, 0.9);
   font-weight: bold;
 }
+.ol_lst_second > li.tit_h4:before,
+.ol_lst_second > ol > li.tit_h4:before {
+  line-height: 24px;
+  font-size: 16px;
+  color: rgba(8, 17, 33, 0.9);
+  font-weight: bold;
+}
 .ol_lst_second > li.line_code.font14:before,
 .ol_lst_second > ol > li.line_code.font14:before {
   line-height: 26px;
@@ -6174,6 +6188,13 @@ body {
   .ol_lst_second > ol > li.tit_h3:before {
     line-height: 22px;
     font-size: 16px;
+  }
+  .ol_lst > li.tit_h4:before,
+  .ol_lst_second > li.tit_h4:before,
+  .ol_lst > ol > li.tit_h4:before,
+  .ol_lst_second > ol > li.tit_h4:before {
+    line-height: 20px;
+    font-size: 15px;
   }
   .ol_lst > li.line_code.font14:before,
   .ol_lst_second > li.line_code.font14:before,
@@ -6309,6 +6330,11 @@ body {
 }
 .img_figure figcaption p code {
   background: #fff;
+}
+@media (max-width: 767px) {
+  .img_figure {
+    padding: 10px 10px;
+  }
 }
 .browser_support {
   *zoom: 1;
@@ -6756,6 +6782,9 @@ body {
 }
 .el_block {
   display: block !important;
+}
+.font16 {
+  font-size: 16px !important;
 }
 .font16 {
   font-size: 16px !important;
