- css > 중급 > CSS 속성 선언순서 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2549,7 +2549,7 @@
 		img {max-width:100%; min-width:100px;}
 		figcaption {
 			margin-top:20px; text-align:center;
-			font-size:14px; font-weight:400; color:#888;
+			font-size:14px; font-weight:400; color:#666;
 			p {
 				margin-top:2px; padding:8px 15px;
 				.font-kr; word-break:break-all; color:#777;
@@ -2773,6 +2773,8 @@
 	.ml_mn {margin-left:-25px !important;}
 	.mb_sm {margin-bottom:5px !important;}
 	.mb_s {margin-bottom:10px !important;}
+	.mb_ms {margin-bottom:15px !important;}
+	.mb_m {margin-bottom:20px !important;}
 	.indent {margin-left:25px;}
 	.indent_small {margin-left:15px;}
 	.indent_max {margin-left:50px;}
@@ -2796,7 +2798,7 @@
 	.t_left {text-align:left;}
 	.t_right {text-align:right;}
 	@media(max-width:@screen-sm-max){
-		.mt_lm {margin-top:30px !important;}
+		.mt_lm {margin-top:40px !important;}
 		.ml_mn {margin-left:-8px !important;}
 		.indent {margin-left:8px;}
 		.indent_max {margin-left:16px;}
