--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -6315,7 +6315,7 @@ body {
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  color: #888;
+  color: #666;
 }
 .img_figure figcaption p {
   margin-top: 2px;
@@ -6532,7 +6532,7 @@ body {
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  color: #888;
+  color: #666;
 }
 .content_models figcaption p {
   margin-top: 2px;
@@ -6741,6 +6741,12 @@ body {
 .mb_s {
   margin-bottom: 10px !important;
 }
+.mb_ms {
+  margin-bottom: 15px !important;
+}
+.mb_m {
+  margin-bottom: 20px !important;
+}
 .indent {
   margin-left: 25px;
 }
@@ -6800,7 +6806,7 @@ body {
 }
 @media (max-width: 767px) {
   .mt_lm {
-    margin-top: 30px !important;
+    margin-top: 40px !important;
   }
   .ml_mn {
     margin-left: -8px !important;
